Pop up fixed and slide scrollbar taken out (new narration window)

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -25,7 +25,7 @@
 }
  /********* SlideNav *********/
 #lessonMenu .bottomRightHeader {
-    width: 480px;
+    width: 460px;
 }
 
 .bottomRightHeader button {
