--- a/src/components/stage/Stage.css
+++ b/src/components/stage/Stage.css
@@ -51,17 +51,13 @@
 }
 
 #more{
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
     top: 454px;
     width: 1000px;
-}
-
-.audioSkin {
-    background-color: rgba(217, 255, 0, 0.658);
 }
 
  /****** Narration Window *****/
