--- a/src/components/stage/utilities/Popup.css
+++ b/src/components/stage/utilities/Popup.css
@@ -36,6 +36,7 @@
     bottom: 20%;
     
     background: white;
+    border-radius: .5em;
     -webkit-border-radius: .5em;
     -moz-border-radius: .5em;
 
